Funciona el backend en el contenedor con sql server en otro contenedor, falta ordenar

--- a/LoginJWT-be/appsettings.json
+++ b/LoginJWT-be/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DANIEL;Database=LoginJWT;User Id=sa;Password=root;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=sqlserver;Database=LoginJWT;User Id=sa;Password=Bagdad#12;TrustServerCertificate=True;"
   }
 }
